@@ -1,5 +1,10 @@
 2014-09-04 Molnar Karoly <molnarkaroly AT users.sf.net>
-	* support/scripts/cinc2h.pl,
+	* support/scripts/mcs51-disasm.pl,
+	  support/scripts/optimize_pic16devices.pl:
+	  Updated unto the Perl 5.16 version.
+
+2014-09-04 Molnar Karoly <molnarkaroly AT users.sf.net>
+	* support/scripts/cinc2h.pl:
 	  Updated unto the Perl 5.16 version.
 
 2014-09-03 Ben Shi <powerstudio1st AT 163.com>
